<resources>
    <string name="app_name" translatable="false">Pizza Shift</string>
    <string name="hint_informe_seu_login">Type Login</string>
    <string name="hint_informe_sua_senha">Type password</string>
    <string name="label_conectar">Connect</string>
    <string name="nome_botao_conectar">Connect</string>
    <string name="mensagem_campo_obrigatório">* Required</string>
    <string name="mensagem_usuario_senha_invalida">user/pass invalid</string>
    <string name="hello">Hello, %1$s</string>
    <string name="fazer_pedido">Order</string>
    <string name="sobre">About</string>
    <string name="desenvolvido_por">Developed by Laércio Silva</string>
    <string name="label_cartao">Cartão</string>
    <string name="label_dinheiro">Dinheiro</string>
    <string name="label_VR">VR</string>
    <string name="label_cheque">Cheque</string>
    <string name="label_pequena">Pequena</string>
    <string name="label_media">Media</string>
    <string name="label_grande">Grande</string>

</resources>
