<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.fiap.pizzaria.PedidoActivity">

    <LinearLayout
        android:id="@+id/activity_pedido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Selecione a pizza" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbAtum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Atum" />

            <CheckBox
                android:id="@+id/cbBacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Bacon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbCalabresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Calabresa" />

            <CheckBox
                android:id="@+id/cbMussarela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Mussarela" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="Tamanho da Pizza" />

        <RadioGroup
            android:id="@+id/rgTamanhoPizza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbTamanhoPequena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_pequena" />

            <RadioButton
                android:id="@+id/rbTamanhoMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_media" />

            <RadioButton
                android:id="@+id/rbTamanhoGrande"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_grande" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="Forma de Pagamento" />

        <Spinner
            android:id="@+id/spTipoPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/opcoes_pagamento">

        </Spinner>

        <Button
            android:id="@+id/btFecharPedido"
            style="@style/botao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Fechar Pedido" />

    </LinearLayout>

    <include layout="@layout/loading" />

</FrameLayout>